# Depth-clustring-Python-Library

./: .gitignore  environment.yml  readme.md
Depth_clustering pylib/: CMakeLists.txt  pyproject.toml  readme.md  requirements.txt  setup.py
Depth_clustering pylib/depth_clustering/: __init__.py
Depth_clustering pylib/examples/: basic_usage.py  clustering_example.py  visualization_example.py
Depth_clustering pylib/src/: CMakeLists.txt  opencv_compat.h  python_bindings.cpp
Depth_clustering pylib/src/clusterers/: image_based_clusterer.h
Depth_clustering pylib/src/communication/: abstract_sender.h
Depth_clustering pylib/src/ground_removal/: depth_ground_remover.cpp
Depth_clustering pylib/src/projections/: ring_projection.cpp
Depth_clustering pylib/src/utils/: cloud.cpp  velodyne_utils.cpp
Tests & Python implementation/: pointcloud_func.py  run_pipeline.py
